[gd_scene load_steps=10 format=3 uid="uid://de3nwqodulfhf"]

[ext_resource type="Script" path="res://npcs/Dialogue Manager.gd" id="1_ahmh4"]
[ext_resource type="Script" path="res://npcs/NPC 1 Script Holder.gd" id="2_ocjla"]
[ext_resource type="Texture2D" uid="uid://3jt06muu7pvg" path="res://npcs/peregrineCloseup wShadow.png" id="3_jpnib"]
[ext_resource type="FontFile" uid="uid://dlo3e3nmh465m" path="res://assets/fonts/PetitePx.ttf" id="4_acfkd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xg12u"]
albedo_color = Color(0.627451, 0.443137, 0.968627, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6w5xl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_whpdr"]

[sub_resource type="Gradient" id="Gradient_pjbv8"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.532864, 1)
colors = PackedColorArray(0.382846, 0.322379, 0.27118, 1, 0.228264, 0.134126, 0.0417312, 1, 0.463427, 0.413919, 0.372495, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_60qbp"]
gradient = SubResource("Gradient_pjbv8")

[node name="NPC Template" type="Node3D"]

[node name="PodBody" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_xg12u")
mesh = SubResource("CapsuleMesh_6w5xl")

[node name="PlayerDetectionBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionBox"]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
shape = SubResource("SphereShape3D_whpdr")

[node name="Dialogue Manager" type="Node3D" parent="."]
script = ExtResource("1_ahmh4")

[node name="Script Holder" type="Node" parent="Dialogue Manager"]
script = ExtResource("2_ocjla")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue Items" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0.823529)
offset_left = 26.0
offset_top = 601.0
offset_right = 642.0
offset_bottom = 691.0
scale = Vector2(1.97888, 1.33964)
texture = SubResource("GradientTexture2D_60qbp")

[node name="Character Portrait" type="TextureRect" parent="CanvasLayer/Dialogue Items"]
z_index = 1
layout_mode = 0
offset_left = -14.1494
offset_top = -157.505
offset_right = 2314.85
offset_bottom = 2571.5
scale = Vector2(0.063, 0.09)
texture = ExtResource("3_jpnib")

[node name="NPC Name Decoration" type="TextureRect" parent="CanvasLayer/Dialogue Items"]
self_modulate = Color(1, 1, 1, 0.780392)
layout_mode = 0
offset_top = -30.232
offset_right = 190.0
offset_bottom = 33.768
scale = Vector2(0.959168, 0.47624)
texture = SubResource("GradientTexture2D_60qbp")

[node name="NPC Name" type="Label" parent="CanvasLayer/Dialogue Items"]
layout_mode = 0
offset_left = 111.105
offset_top = -30.2572
offset_right = 181.105
offset_bottom = -13.2572
scale = Vector2(1.53478, 2.11475)
theme_override_fonts/font = ExtResource("4_acfkd")
text = "Peregrine"
autowrap_mode = 2

[node name="NPC Text" type="Label" parent="CanvasLayer/Dialogue Items"]
layout_mode = 0
offset_left = 130.0
offset_top = 8.0
offset_right = 568.0
offset_bottom = 87.0
scale = Vector2(1.00914, 0.895473)
theme_override_fonts/font = ExtResource("4_acfkd")
theme_override_font_sizes/font_size = 29
text = "\"Place Holder Text\""
autowrap_mode = 2

[connection signal="area_entered" from="PlayerDetectionBox" to="Dialogue Manager" method="_on_player_detection_box_area_entered"]
[connection signal="area_entered" from="PlayerDetectionBox" to="Dialogue Manager/Script Holder" method="_on_player_detection_box_area_entered"]
[connection signal="area_exited" from="PlayerDetectionBox" to="Dialogue Manager" method="_on_player_detection_box_area_exited"]
[connection signal="NPC_text" from="Dialogue Manager/Script Holder" to="Dialogue Manager" method="_on_script_holder_npc_text"]
